# sadfs

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  format.sh  ideas.md
.github/workflows/: build-test.yml
cmake/: FindgRPC.cmake
doc/: ideas.md  protocol.md  todo.md
doc/agile/: product-backlog.md
doc/reports/: small-report-2.md  small-report-3.md  small-report-4.md  small-report-5.md  sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-report-template.md
example/: CMakeLists.txt  chunk-read-req.cpp  create-chunk.cpp  create-chunks.sh  dummy-sadcd.cpp  dummy-sadmd.cpp  echod.cpp  fc-test.cpp  listener.cpp  log.sh  msg.cpp  open-file.cpp  proto-msg.cpp  read-file.cpp  sadcd-tests.cpp  sadmd-tests.cpp  send-req.cpp  stream-req.cpp  tests.cpp  uuid.cpp
include/sadfs/: constants.hpp  defaults.hpp  exceptions.hpp  is_detected.hpp  logger.hpp  socket.hpp  types.hpp  util.hpp  uuid.hpp
include/sadfs/bootstrap/: util.hpp
include/sadfs/comm/: defaults.hpp  inet.hpp  io.hpp  messages.hpp  socket.hpp  uuid.hpp
include/sadfs/common/: uuid.hpp
include/sadfs/msgs/: channel.hpp  chunk_messages.hpp  client_messages.hpp  common.hpp  deserializer_impl.hpp  deserializers.hpp  master_messages.hpp  messages.hpp  serializer_impl.hpp  serializers.hpp
include/sadfs/msgs/chunk/: deserializer.hpp  message_processor.hpp  messages.hpp  serializer.hpp
include/sadfs/msgs/client/: deserializer.hpp  messages.hpp  serializer.hpp
include/sadfs/msgs/master/: deserializer.hpp  message_processor.hpp  messages.hpp  serializer.hpp
include/sadfs/sadcd/: defaults.hpp  heart.hpp  io.hpp  sadcd.hpp
include/sadfs/sadfsd/: defaults.hpp  sadfilesys.hpp  sadfuse.hpp
include/sadfs/sadmd/: defaults.hpp  internal.hpp  sadmd.hpp  util.hpp
src/: CMakeLists.txt
src/bootstrap/: CMakeLists.txt  sadcd-bootstrap.cpp  sadmd-bootstrap.cpp  util.cpp
src/comm/: inet.cpp  internal.proto  io.cpp  messages.cpp  messages.proto  socket.cpp  uuid.cpp
src/common/: socket.cpp
src/msgs/: channel.cpp  chunk.cpp  chunk_messages.cpp  client_messages.cpp  master.cpp  messages.cpp  serializers.cpp
src/msgs/chunk/: messages.cpp
src/msgs/client/: messages.cpp
src/msgs/master/: messages.cpp
src/proto/: chunk.proto  client.proto  common.proto  internal.proto  master.proto  services.proto
src/sadcd/: CMakeLists.txt  heart.cpp  io.cpp  main.cpp  sadcd-bootstrap.cpp  sadcd.cpp
src/sadfsd/: sadfilesys.cpp  sadfsd-bootstrap.cpp  sadfuse.cpp
src/sadmd/: CMakeLists.txt  main.cpp  sadmd-bootstrap.cpp  sadmd.cpp
